replace antlr 3.1.3 with 4.6

--- a/build.xml
+++ b/build.xml
@@ -144,9 +144,8 @@ oracle.jar=C:/workspace/HEAD/for_development/bisdevsrv28/jboss/server/infra/lib/
             <pathelement path="${oracle.jar}" />
             <pathelement path="${extlibs.dir}/mysql-connector-java-5.1.6.jar" />
             <pathelement path="${extlibs.dir}/postgresql-8.3-603.jdbc4.jar" />
-            <!-- pin to Antlr 3.1.3 until we upgrade parsing -->
-            <pathelement path="${extlibs.dir}/antlr-3.1.3.jar" />
-            <pathelement path="${extlibs.dir}/stringtemplate-3.2.1.jar" />
+            <!-- pin to Antlr 4 -->
+            <pathelement path="${extlibs.dir}/antlr-4.6-complete.jar" />
             <pathelement path="${extlibs.dir}/commons-compress-1.12.jar"/>
             <!-- pin to ASM 5.0.3 until we upgrade compilation -->
             <pathelement path="${extlibs.dir}/asm-5.0.4.jar" />
@@ -556,9 +555,9 @@ The readme text for the next release will be like:
         <taskdef name="jarjar" classname="com.tonicsystems.jarjar.JarJarTask" classpath="extlibs/jarjar-1.4.jar"/>
         <jarjar destfile="${dist.dir}/${jython.deploy.jar}">
             <zipfileset src="${dist.dir}/${jython.dev.jar}"/>
-            <!-- pin to Antlr 3.1.3 until we upgrade parsing -->
-            <zipfileset src="extlibs/antlr-runtime-3.1.3.jar"/>
-            <rule pattern="org.antlr.runtime.**" result="org.python.antlr.runtime.@1"/>
+            <!-- pin to Antlr 4 (notice the .v4. in the package names) -->
+            <zipfileset src="extlibs/antlr-runtime-4.6.jar"/>
+            <rule pattern="org.antlr.v4.runtime.**" result="org.python.antlr.v4.runtime.@1"/>
             <!-- pin to ASM 5.0.3 until we upgrade compilation -->
             <zipfileset src="extlibs/asm-5.0.4.jar"/>
             <zipfileset src="extlibs/asm-commons-5.0.4.jar"/>
@@ -894,7 +893,6 @@ The readme text for the next release will be like:
                 <exclude name="extlibs/jarjar*.jar" />
                 <exclude name="extlibs/junit*.jar" />
                 <exclude name="extlibs/servlet-api*.jar" />
-                <exclude name="extlibs/stringtemplate*.jar" />
                 <exclude name="extlibs/xerces*.jar" />
             </fileset>
             <manifest>
