--- a/build.xml
+++ b/build.xml
@@ -431,16 +431,16 @@ The readme text for the next release will be like:
     </target>
 
     <target name="antlr_gen" depends="prepare-output" unless="antlr.notneeded">
-        <java classname="org.antlr.Tool" failonerror="true" fork="true" dir="${jython.base.dir}">
+        <java classname="org.antlr.v4.Tool" failonerror="true" fork="true" dir="${jython.base.dir}">
             <jvmarg value="-Xmx512m"/>
-            <arg value="-Xconversiontimeout"/>
-            <arg value="2000"/>
-            <arg value="-fo"/>
+            <arg value="-o"/>
             <arg path="${work.dir}/build/gensrc/org/python/antlr"/>
             <arg value="-lib"/>
             <arg path="${work.dir}/build/gensrc/org/python/antlr"/>
-            <arg file="${jython.base.dir}/grammar/Python.g"/>
-            <arg file="${jython.base.dir}/grammar/PythonPartial.g"/>
+            <arg file="${jython.base.dir}/grammar/Python.g4"/>
+            <!-- 
+            <arg file="${jython.base.dir}/grammar/PythonPartial.g4"/>
+            -->
             <classpath refid="main.classpath"/>
         </java>
 
