parse raise statements

--- a/grammar/CPython27.max.failing.files.properties
+++ b/grammar/CPython27.max.failing.files.properties
@@ -9,7 +9,6 @@ Demo/classes/Range.py="failure"
 Demo/comparisons/regextest.py="failure"
 Demo/comparisons/sortingtest.py="failure"
 Demo/comparisons/systemtest.py="failure"
-Demo/curses/life.py="failure"
 Demo/curses/repeat.py="failure"
 Demo/md5test/md5driver.py="failure"
 Demo/metaclasses/Enum.py="failure"
@@ -27,11 +26,9 @@ Demo/pdist/cvslib.py="failure"
 Demo/pdist/cvslock.py="failure"
 Demo/pdist/FSProxy.py="failure"
 Demo/pdist/makechangelog.py="failure"
-Demo/pdist/rcslib.py="failure"
 Demo/pdist/RCSProxy.py="failure"
 Demo/pdist/rcvs.py="failure"
 Demo/pdist/rrcs.py="failure"
-Demo/pdist/security.py="failure"
 Demo/pdist/server.py="failure"
 Demo/pdist/sumtree.py="failure"
 Demo/pysvr/pysvr.py="failure"
@@ -65,22 +62,18 @@ Demo/sockets/throughput.py="failure"
 Demo/sockets/udpecho.py="failure"
 Demo/sockets/unixclient.py="failure"
 Demo/sockets/unixserver.py="failure"
-Demo/threads/Coroutine.py="failure"
 Demo/threads/fcmp.py="failure"
 Demo/threads/find.py="failure"
 Demo/threads/Generator.py="failure"
 Demo/threads/squasher.py="failure"
 Demo/threads/sync.py="failure"
 Demo/threads/telnet.py="failure"
-Demo/tix/tixwidgets.py="failure"
 Demo/tkinter/guido/AttrDialog.py="failure"
 Demo/tkinter/guido/dialog.py="failure"
 Demo/tkinter/guido/ManPage.py="failure"
 Demo/tkinter/guido/mbox.py="failure"
 Demo/tkinter/guido/ShellWindow.py="failure"
-Demo/tkinter/guido/sortvisu.py="failure"
 Demo/tkinter/guido/ss1.py="failure"
-Demo/tkinter/guido/svkill.py="failure"
 Demo/tkinter/guido/tkman.py="failure"
 Demo/tkinter/guido/wish.py="failure"
 Demo/tkinter/matt/00-HELLO-WORLD.py="failure"
@@ -167,15 +160,12 @@ Lib/base64.py="failure"
 Lib/BaseHTTPServer.py="failure"
 Lib/Bastion.py="failure"
 Lib/bdb.py="failure"
-Lib/binhex.py="failure"
 Lib/bsddb/__init__.py="failure"
-Lib/bsddb/dbrecio.py="failure"
 Lib/bsddb/dbshelve.py="failure"
 Lib/bsddb/dbtables.py="failure"
 Lib/bsddb/test/test_all.py="failure"
 Lib/bsddb/test/test_associate.py="failure"
 Lib/bsddb/test/test_basics.py="failure"
-Lib/bsddb/test/test_compare.py="failure"
 Lib/bsddb/test/test_compat.py="failure"
 Lib/bsddb/test/test_dbenv.py="failure"
 Lib/bsddb/test/test_dbshelve.py="failure"
@@ -193,8 +183,6 @@ Lib/bsddb/test/test_thread.py="failure"
 Lib/calendar.py="failure"
 Lib/cgi.py="failure"
 Lib/CGIHTTPServer.py="failure"
-Lib/chunk.py="failure"
-Lib/cmd.py="failure"
 Lib/code.py="failure"
 Lib/codecs.py="failure"
 Lib/codeop.py="failure"
@@ -210,7 +198,6 @@ Lib/compiler/visitor.py="failure"
 Lib/ConfigParser.py="failure"
 Lib/contextlib.py="failure"
 Lib/copy.py="failure"
-Lib/copy_reg.py="failure"
 Lib/cProfile.py="failure"
 Lib/csv.py="failure"
 Lib/ctypes/macholib/dyld.py="failure"
@@ -229,30 +216,19 @@ Lib/curses/has_key.py="failure"
 Lib/curses/textpad.py="failure"
 Lib/dbhash.py="failure"
 Lib/decimal.py="failure"
-Lib/difflib.py="failure"
 Lib/dis.py="failure"
-Lib/distutils/archive_util.py="failure"
 Lib/distutils/bcppcompiler.py="failure"
 Lib/distutils/ccompiler.py="failure"
 Lib/distutils/cmd.py="failure"
-Lib/distutils/command/bdist.py="failure"
-Lib/distutils/command/bdist_dumb.py="failure"
-Lib/distutils/command/bdist_msi.py="failure"
 Lib/distutils/command/bdist_rpm.py="failure"
-Lib/distutils/command/bdist_wininst.py="failure"
-Lib/distutils/command/build_clib.py="failure"
-Lib/distutils/command/build_ext.py="failure"
 Lib/distutils/command/build_scripts.py="failure"
 Lib/distutils/command/install.py="failure"
-Lib/distutils/command/install_lib.py="failure"
 Lib/distutils/command/install_scripts.py="failure"
 Lib/distutils/command/register.py="failure"
-Lib/distutils/command/sdist.py="failure"
 Lib/distutils/command/upload.py="failure"
 Lib/distutils/config.py="failure"
 Lib/distutils/core.py="failure"
 Lib/distutils/cygwinccompiler.py="failure"
-Lib/distutils/dep_util.py="failure"
 Lib/distutils/dir_util.py="failure"
 Lib/distutils/dist.py="failure"
 Lib/distutils/emxccompiler.py="failure"
@@ -263,19 +239,11 @@ Lib/distutils/msvc9compiler.py="failure"
 Lib/distutils/msvccompiler.py="failure"
 Lib/distutils/spawn.py="failure"
 Lib/distutils/tests/test_spawn.py="failure"
-Lib/distutils/text_file.py="failure"
 Lib/distutils/unixccompiler.py="failure"
 Lib/distutils/util.py="failure"
-Lib/distutils/version.py="failure"
 Lib/doctest.py="failure"
 Lib/DocXMLRPCServer.py="failure"
 Lib/dumbdbm.py="failure"
-Lib/email/test/test_email.py="failure"
-Lib/email/test/test_email_renamed.py="failure"
-Lib/encodings/__init__.py="failure"
-Lib/encodings/punycode.py="failure"
-Lib/encodings/utf_16.py="failure"
-Lib/encodings/utf_32.py="failure"
 Lib/encodings/uu_codec.py="failure"
 Lib/filecmp.py="failure"
 Lib/fileinput.py="failure"
@@ -288,7 +256,6 @@ Lib/gettext.py="failure"
 Lib/gzip.py="failure"
 Lib/heapq.py="failure"
 Lib/hotshot/log.py="failure"
-Lib/hotshot/stats.py="failure"
 Lib/hotshot/stones.py="failure"
 Lib/htmllib.py="failure"
 Lib/httplib.py="failure"
@@ -296,15 +263,11 @@ Lib/idlelib/ColorDelegator.py="failure"
 Lib/idlelib/EditorWindow.py="failure"
 Lib/idlelib/FileList.py="failure"
 Lib/idlelib/idle_test/test_calltips.py="failure"
-Lib/idlelib/IOBinding.py="failure"
 Lib/idlelib/MultiCall.py="failure"
 Lib/idlelib/Percolator.py="failure"
 Lib/idlelib/PyShell.py="failure"
-Lib/idlelib/RemoteDebugger.py="failure"
-Lib/idlelib/rpc.py="failure"
 Lib/idlelib/run.py="failure"
 Lib/idlelib/ScrolledList.py="failure"
-Lib/idlelib/TreeWidget.py="failure"
 Lib/idlelib/UndoDelegator.py="failure"
 Lib/idlelib/WindowList.py="failure"
 Lib/ihooks.py="failure"
@@ -319,9 +282,7 @@ Lib/lib-tk/FileDialog.py="failure"
 Lib/lib-tk/SimpleDialog.py="failure"
 Lib/lib-tk/test/test_tkinter/test_variables.py="failure"
 Lib/lib-tk/test/widget_tests.py="failure"
-Lib/lib-tk/Tix.py="failure"
 Lib/lib-tk/tkColorChooser.py="failure"
-Lib/lib-tk/tkCommonDialog.py="failure"
 Lib/lib-tk/tkFileDialog.py="failure"
 Lib/lib-tk/tkFont.py="failure"
 Lib/lib-tk/Tkinter.py="failure"
@@ -329,17 +290,13 @@ Lib/lib-tk/tkMessageBox.py="failure"
 Lib/lib-tk/tkSimpleDialog.py="failure"
 Lib/lib-tk/turtle.py="failure"
 Lib/locale.py="failure"
-Lib/macpath.py="failure"
-Lib/macurl2path.py="failure"
 Lib/mailbox.py="failure"
 Lib/mailcap.py="failure"
 Lib/mhlib.py="failure"
-Lib/mimetools.py="failure"
 Lib/mimetypes.py="failure"
 Lib/mimify.py="failure"
 Lib/modulefinder.py="failure"
 Lib/msilib/__init__.py="failure"
-Lib/multifile.py="failure"
 Lib/multiprocessing/connection.py="failure"
 Lib/multiprocessing/forking.py="failure"
 Lib/multiprocessing/managers.py="failure"
@@ -350,7 +307,6 @@ Lib/multiprocessing/sharedctypes.py="failure"
 Lib/multiprocessing/util.py="failure"
 Lib/netrc.py="failure"
 Lib/nntplib.py="failure"
-Lib/nturl2path.py="failure"
 Lib/optparse.py="failure"
 Lib/os.py="failure"
 Lib/pdb.py="failure"
@@ -366,10 +322,7 @@ Lib/plat-irix5/cdplayer.py="failure"
 Lib/plat-irix5/FILE.py="failure"
 Lib/plat-irix5/flp.py="failure"
 Lib/plat-irix5/IOCTL.py="failure"
-Lib/plat-irix5/jpeg.py="failure"
 Lib/plat-irix5/panel.py="failure"
-Lib/plat-irix5/panelparser.py="failure"
-Lib/plat-irix5/readcd.py="failure"
 Lib/plat-irix5/torgb.py="failure"
 Lib/plat-irix5/WAIT.py="failure"
 Lib/plat-irix6/cddb.py="failure"
@@ -378,10 +331,7 @@ Lib/plat-irix6/FILE.py="failure"
 Lib/plat-irix6/flp.py="failure"
 Lib/plat-irix6/IN.py="failure"
 Lib/plat-irix6/IOCTL.py="failure"
-Lib/plat-irix6/jpeg.py="failure"
 Lib/plat-irix6/panel.py="failure"
-Lib/plat-irix6/panelparser.py="failure"
-Lib/plat-irix6/readcd.py="failure"
 Lib/plat-irix6/torgb.py="failure"
 Lib/plat-irix6/WAIT.py="failure"
 Lib/plat-linux2/DLFCN.py="failure"
@@ -394,74 +344,34 @@ Lib/plat-mac/applesingle.py="failure"
 Lib/plat-mac/appletrawmain.py="failure"
 Lib/plat-mac/argvemulator.py="failure"
 Lib/plat-mac/Audio_mac.py="failure"
-Lib/plat-mac/bgenlocations.py="failure"
 Lib/plat-mac/buildtools.py="failure"
 Lib/plat-mac/bundlebuilder.py="failure"
 Lib/plat-mac/Carbon/CarbonEvents.py="failure"
 Lib/plat-mac/Carbon/Components.py="failure"
-Lib/plat-mac/Carbon/ControlAccessor.py="failure"
 Lib/plat-mac/Carbon/Controls.py="failure"
 Lib/plat-mac/Carbon/Dragconst.py="failure"
 Lib/plat-mac/Carbon/Folders.py="failure"
 Lib/plat-mac/Carbon/Fonts.py="failure"
 Lib/plat-mac/Carbon/Icons.py="failure"
 Lib/plat-mac/Carbon/MacTextEditor.py="failure"
-Lib/plat-mac/Carbon/MediaDescr.py="failure"
 Lib/plat-mac/Carbon/OSAconst.py="failure"
 Lib/plat-mac/Carbon/QDOffscreen.py="failure"
-Lib/plat-mac/Carbon/Qt.py="failure"
 Lib/plat-mac/Carbon/QuickDraw.py="failure"
 Lib/plat-mac/Carbon/QuickTime.py="failure"
 Lib/plat-mac/Carbon/Sound.py="failure"
 Lib/plat-mac/Carbon/Windows.py="failure"
-Lib/plat-mac/cfmfile.py="failure"
 Lib/plat-mac/EasyDialogs.py="failure"
 Lib/plat-mac/findertools.py="failure"
 Lib/plat-mac/FrameWork.py="failure"
 Lib/plat-mac/gensuitemodule.py="failure"
 Lib/plat-mac/ic.py="failure"
-Lib/plat-mac/lib-scriptpackages/_builtinSuites/builtin_Suite.py="failure"
-Lib/plat-mac/lib-scriptpackages/CodeWarrior/CodeWarrior_suite.py="failure"
-Lib/plat-mac/lib-scriptpackages/CodeWarrior/Metrowerks_Shell_Suite.py="failure"
-Lib/plat-mac/lib-scriptpackages/CodeWarrior/Required.py="failure"
-Lib/plat-mac/lib-scriptpackages/CodeWarrior/Standard_Suite.py="failure"
-Lib/plat-mac/lib-scriptpackages/Explorer/Microsoft_Internet_Explorer.py="failure"
-Lib/plat-mac/lib-scriptpackages/Explorer/Netscape_Suite.py="failure"
-Lib/plat-mac/lib-scriptpackages/Explorer/Required_Suite.py="failure"
-Lib/plat-mac/lib-scriptpackages/Explorer/Standard_Suite.py="failure"
-Lib/plat-mac/lib-scriptpackages/Explorer/URL_Suite.py="failure"
-Lib/plat-mac/lib-scriptpackages/Explorer/Web_Browser_Suite.py="failure"
-Lib/plat-mac/lib-scriptpackages/Finder/Finder_Basics.py="failure"
-Lib/plat-mac/lib-scriptpackages/Finder/Finder_items.py="failure"
-Lib/plat-mac/lib-scriptpackages/Finder/Legacy_suite.py="failure"
-Lib/plat-mac/lib-scriptpackages/Finder/Standard_Suite.py="failure"
-Lib/plat-mac/lib-scriptpackages/Netscape/Mozilla_suite.py="failure"
-Lib/plat-mac/lib-scriptpackages/Netscape/PowerPlant.py="failure"
-Lib/plat-mac/lib-scriptpackages/Netscape/Required_suite.py="failure"
-Lib/plat-mac/lib-scriptpackages/Netscape/Standard_Suite.py="failure"
-Lib/plat-mac/lib-scriptpackages/Netscape/Standard_URL_suite.py="failure"
-Lib/plat-mac/lib-scriptpackages/Netscape/WorldWideWeb_suite.py="failure"
-Lib/plat-mac/lib-scriptpackages/StdSuites/AppleScript_Suite.py="failure"
-Lib/plat-mac/lib-scriptpackages/StdSuites/Standard_Suite.py="failure"
-Lib/plat-mac/lib-scriptpackages/SystemEvents/Disk_Folder_File_Suite.py="failure"
-Lib/plat-mac/lib-scriptpackages/SystemEvents/Folder_Actions_Suite.py="failure"
-Lib/plat-mac/lib-scriptpackages/SystemEvents/Hidden_Suite.py="failure"
-Lib/plat-mac/lib-scriptpackages/SystemEvents/Power_Suite.py="failure"
-Lib/plat-mac/lib-scriptpackages/SystemEvents/Standard_Suite.py="failure"
-Lib/plat-mac/lib-scriptpackages/SystemEvents/System_Events_Suite.py="failure"
-Lib/plat-mac/lib-scriptpackages/Terminal/Standard_Suite.py="failure"
-Lib/plat-mac/lib-scriptpackages/Terminal/Terminal_Suite.py="failure"
 Lib/plat-mac/macostools.py="failure"
 Lib/plat-mac/macresource.py="failure"
 Lib/plat-mac/MiniAEFrame.py="failure"
 Lib/plat-mac/pimp.py="failure"
-Lib/plat-mac/PixMapWrapper.py="failure"
 Lib/plat-mac/terminalcommand.py="failure"
 Lib/plat-mac/videoreader.py="failure"
 Lib/plat-os2emx/_emx_link.py="failure"
-Lib/plat-os2emx/grp.py="failure"
-Lib/plat-os2emx/pwd.py="failure"
-Lib/plat-riscos/riscospath.py="failure"
 Lib/plat-riscos/rourl2path.py="failure"
 Lib/plat-sunos5/IN.py="failure"
 Lib/plat-sunos5/STROPTS.py="failure"
@@ -469,9 +379,7 @@ Lib/plat-sunos5/TYPES.py="failure"
 Lib/plat-unixware7/IN.py="failure"
 Lib/plat-unixware7/STROPTS.py="failure"
 Lib/platform.py="failure"
-Lib/plistlib.py="failure"
 Lib/poplib.py="failure"
-Lib/posixfile.py="failure"
 Lib/pprint.py="failure"
 Lib/profile.py="failure"
 Lib/pstats.py="failure"
@@ -484,9 +392,7 @@ Lib/random.py="failure"
 Lib/re.py="failure"
 Lib/rexec.py="failure"
 Lib/rfc822.py="failure"
-Lib/rlcompleter.py="failure"
 Lib/runpy.py="failure"
-Lib/sets.py="failure"
 Lib/sgmllib.py="failure"
 Lib/shlex.py="failure"
 Lib/shutil.py="failure"
@@ -506,9 +412,7 @@ Lib/sre_compile.py="failure"
 Lib/sre_constants.py="failure"
 Lib/sre_parse.py="failure"
 Lib/stat.py="failure"
-Lib/string.py="failure"
 Lib/StringIO.py="failure"
-Lib/stringold.py="failure"
 Lib/subprocess.py="failure"
 Lib/sunau.py="failure"
 Lib/sunaudio.py="failure"
@@ -530,7 +434,6 @@ Lib/test/crashers/loosing_mro_ref.py="failure"
 Lib/test/crashers/nasty_eq_vs_dict.py="failure"
 Lib/test/inspect_fodder.py="failure"
 Lib/test/inspect_fodder2.py="failure"
-Lib/test/leakers/test_gestalt.py="failure"
 Lib/test/list_tests.py="failure"
 Lib/test/mapping_tests.py="failure"
 Lib/test/pickletester.py="failure"
@@ -572,7 +475,6 @@ Lib/test/test_compile.py="failure"
 Lib/test/test_compiler.py="failure"
 Lib/test/test_complex.py="failure"
 Lib/test/test_complex_args.py="failure"
-Lib/test/test_contains.py="failure"
 Lib/test/test_contextlib.py="failure"
 Lib/test/test_cookielib.py="failure"
 Lib/test/test_copy.py="failure"
@@ -593,7 +495,6 @@ Lib/test/test_dummy_threading.py="failure"
 Lib/test/test_enumerate.py="failure"
 Lib/test/test_eof.py="failure"
 Lib/test/test_epoll.py="failure"
-Lib/test/test_exception_variations.py="failure"
 Lib/test/test_exceptions.py="failure"
 Lib/test/test_fcntl.py="failure"
 Lib/test/test_file2k.py="failure"
@@ -628,7 +529,6 @@ Lib/test/test_inspect.py="failure"
 Lib/test/test_int.py="failure"
 Lib/test/test_int_literal.py="failure"
 Lib/test/test_ioctl.py="failure"
-Lib/test/test_iter.py="failure"
 Lib/test/test_itertools.py="failure"
 Lib/test/test_kqueue.py="failure"
 Lib/test/test_linuxaudiodev.py="failure"
@@ -646,9 +546,7 @@ Lib/test/test_multiprocessing.py="failure"
 Lib/test/test_mutants.py="failure"
 Lib/test/test_netrc.py="failure"
 Lib/test/test_nis.py="failure"
-Lib/test/test_ntpath.py="failure"
 Lib/test/test_opcodes.py="failure"
-Lib/test/test_openpty.py="failure"
 Lib/test/test_operator.py="failure"
 Lib/test/test_optparse.py="failure"
 Lib/test/test_os.py="failure"
@@ -656,7 +554,6 @@ Lib/test/test_ossaudiodev.py="failure"
 Lib/test/test_parser.py="failure"
 Lib/test/test_pdb.py="failure"
 Lib/test/test_peepholer.py="failure"
-Lib/test/test_pkgimport.py="failure"
 Lib/test/test_poll.py="failure"
 Lib/test/test_poplib.py="failure"
 Lib/test/test_pow.py="failure"
@@ -667,13 +564,11 @@ Lib/test/test_py3kwarn.py="failure"
 Lib/test/test_pyclbr.py="failure"
 Lib/test/test_pydoc.py="failure"
 Lib/test/test_pyexpat.py="failure"
-Lib/test/test_queue.py="failure"
 Lib/test/test_random.py="failure"
 Lib/test/test_re.py="failure"
 Lib/test/test_repr.py="failure"
 Lib/test/test_resource.py="failure"
 Lib/test/test_rfc822.py="failure"
-Lib/test/test_richcmp.py="failure"
 Lib/test/test_runpy.py="failure"
 Lib/test/test_sax.py="failure"
 Lib/test/test_scope.py="failure"
@@ -705,7 +600,6 @@ Lib/test/test_tempfile.py="failure"
 Lib/test/test_thread.py="failure"
 Lib/test/test_threaded_import.py="failure"
 Lib/test/test_threading.py="failure"
-Lib/test/test_threadsignals.py="failure"
 Lib/test/test_timeout.py="failure"
 Lib/test/test_tokenize.py="failure"
 Lib/test/test_traceback.py="failure"
@@ -714,16 +608,13 @@ Lib/test/test_types.py="failure"
 Lib/test/test_unary.py="failure"
 Lib/test/test_unicode.py="failure"
 Lib/test/test_unicode_file.py="failure"
-Lib/test/test_univnewlines2k.py="failure"
 Lib/test/test_urllib2_localnet.py="failure"
 Lib/test/test_urllib2net.py="failure"
 Lib/test/test_urllibnet.py="failure"
 Lib/test/test_userdict.py="failure"
 Lib/test/test_uu.py="failure"
 Lib/test/test_uuid.py="failure"
-Lib/test/test_wait3.py="failure"
 Lib/test/test_winreg.py="failure"
-Lib/test/test_with.py="failure"
 Lib/test/test_xdrlib.py="failure"
 Lib/test/test_xml_etree.py="failure"
 Lib/test/test_xmlrpc.py="failure"
@@ -753,35 +644,22 @@ Lib/unittest/test/test_loader.py="failure"
 Lib/unittest/test/test_result.py="failure"
 Lib/urllib.py="failure"
 Lib/urllib2.py="failure"
-Lib/urlparse.py="failure"
-Lib/UserDict.py="failure"
-Lib/UserString.py="failure"
 Lib/uu.py="failure"
 Lib/uuid.py="failure"
 Lib/warnings.py="failure"
-Lib/wave.py="failure"
-Lib/weakref.py="failure"
 Lib/webbrowser.py="failure"
 Lib/whichdb.py="failure"
-Lib/wsgiref/handlers.py="failure"
 Lib/wsgiref/simple_server.py="failure"
 Lib/xdrlib.py="failure"
-Lib/xml/dom/domreg.py="failure"
-Lib/xml/dom/expatbuilder.py="failure"
-Lib/xml/dom/minidom.py="failure"
 Lib/xml/dom/NodeFilter.py="failure"
 Lib/xml/dom/pulldom.py="failure"
 Lib/xml/etree/ElementTree.py="failure"
 Lib/xml/sax/__init__.py="failure"
 Lib/xml/sax/expatreader.py="failure"
 Lib/xml/sax/handler.py="failure"
-Lib/xml/sax/xmlreader.py="failure"
 Lib/xmllib.py="failure"
 Lib/xmlrpclib.py="failure"
 Lib/zipfile.py="failure"
-Mac/Demo/applescript/Disk_Copy/Special_Events.py="failure"
-Mac/Demo/applescript/Disk_Copy/Standard_Suite.py="failure"
-Mac/Demo/applescript/Disk_Copy/Utility_Events.py="failure"
 Mac/Demo/applescript/makedisk.py="failure"
 Mac/Demo/imgbrowse/imgbrowse.py="failure"
 Mac/Demo/imgbrowse/mac_image.py="failure"
@@ -804,7 +682,6 @@ Mac/Modules/app/appscan.py="failure"
 Mac/Modules/carbonevt/CarbonEvtscan.py="failure"
 Mac/Modules/carbonevt/CarbonEvtsupport.py="failure"
 Mac/Modules/cf/cfscan.py="failure"
-Mac/Modules/cf/cfsupport.py="failure"
 Mac/Modules/cg/cgscan.py="failure"
 Mac/Modules/cm/cmscan.py="failure"
 Mac/Modules/ctl/ctlscan.py="failure"
@@ -812,7 +689,6 @@ Mac/Modules/dlg/dlgscan.py="failure"
 Mac/Modules/drag/dragscan.py="failure"
 Mac/Modules/evt/evtscan.py="failure"
 Mac/Modules/file/filescan.py="failure"
-Mac/Modules/file/filesupport.py="failure"
 Mac/Modules/fm/fmscan.py="failure"
 Mac/Modules/folder/folderscan.py="failure"
 Mac/Modules/help/helpscan.py="failure"
@@ -820,7 +696,6 @@ Mac/Modules/ibcarbon/IBCarbonscan.py="failure"
 Mac/Modules/icn/icnscan.py="failure"
 Mac/Modules/launch/launchscan.py="failure"
 Mac/Modules/list/listscan.py="failure"
-Mac/Modules/list/listsupport.py="failure"
 Mac/Modules/menu/menuscan.py="failure"
 Mac/Modules/mlte/mltescan.py="failure"
 Mac/Modules/osa/osascan.py="failure"
@@ -831,7 +706,6 @@ Mac/Modules/res/resscan.py="failure"
 Mac/Modules/scrap/scrapscan.py="failure"
 Mac/Modules/snd/sndscan.py="failure"
 Mac/Modules/te/tescan.py="failure"
-Mac/Modules/te/tesupport.py="failure"
 Mac/Modules/win/winscan.py="failure"
 Mac/scripts/bgenall.py="failure"
 Mac/scripts/BuildApplet.py="failure"
@@ -848,12 +722,8 @@ Parser/spark.py="failure"
 PC/testpy.py="failure"
 PC/VC6/build_ssl.py="failure"
 setup.py="failure"
-Tools/bgen/bgen/bgenBuffer.py="failure"
 Tools/bgen/bgen/bgenGenerator.py="failure"
 Tools/bgen/bgen/bgenGeneratorGroup.py="failure"
-Tools/bgen/bgen/bgenHeapBuffer.py="failure"
-Tools/bgen/bgen/bgenOutput.py="failure"
-Tools/bgen/bgen/bgenType.py="failure"
 Tools/bgen/bgen/scantools.py="failure"
 Tools/compiler/astgen.py="failure"
 Tools/compiler/compile.py="failure"
@@ -863,7 +733,6 @@ Tools/compiler/regrtest.py="failure"
 Tools/compiler/stacktest.py="failure"
 Tools/faqwiz/faqw.py="failure"
 Tools/faqwiz/faqwiz.py="failure"
-Tools/framer/framer/struct.py="failure"
 Tools/freeze/checkextensions_win32.py="failure"
 Tools/freeze/freeze.py="failure"
 Tools/freeze/hello.py="failure"
@@ -874,14 +743,13 @@ Tools/freeze/winmakemakefile.py="failure"
 Tools/i18n/makelocalealias.py="failure"
 Tools/i18n/msgfmt.py="failure"
 Tools/i18n/pygettext.py="failure"
+Tools/msi/msi.py="failure"
 Tools/pybench/Arithmetic.py="failure"
 Tools/pybench/clockres.py="failure"
 Tools/pybench/CommandLine.py="failure"
-Tools/pybench/Exceptions.py="failure"
 Tools/pybench/Numbers.py="failure"
 Tools/pybench/pybench.py="failure"
 Tools/pybench/systimes.py="failure"
-Tools/pybench/With.py="failure"
 Tools/pynche/ColorDB.py="failure"
 Tools/pynche/Main.py="failure"
 Tools/scripts/byteyears.py="failure"
