replace star_expr with expr
This introduces one more failing file, with the following statement:
  for *state, val in items:
which we hope to resolve later

--- a/grammar/CPython27.max.failing.files.properties
+++ b/grammar/CPython27.max.failing.files.properties
@@ -193,6 +193,7 @@ Lib/test/test_xrange.py="failure"
 Lib/test/test_zipfile.py="failure"
 Lib/test/test_zipimport.py="failure"
 Lib/test/test_zlib.py="failure"
+Lib/tkinter/ttk.py="failure"
 Lib/uu.py="failure"
 Lib/uuid.py="failure"
 Lib/xdrlib.py="failure"
